--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
+  <!-- rute basic-->
   <base href="/" />
 
   <meta name="color-scheme" content="light dark" />
